[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Calculadora.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 46
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 313.0
margin_top = 104.0
margin_right = -401.0
margin_bottom = -172.0
script = ExtResource( 2 )

[node name="Igual" type="Label" parent="."]
margin_left = 60.0
margin_top = -53.0
margin_right = 287.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
align = 2
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = 27.0
margin_right = 115.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( -33, 14 )
custom_fonts/font = SubResource( 1 )
text = "C"

[node name="0" type="Button" parent="."]
margin_left = 116.0
margin_top = 240.0
margin_right = 229.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="1" type="Button" parent="."]
margin_left = 59.0
margin_top = 80.0
margin_right = 115.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="2" type="Button" parent="."]
margin_left = 116.0
margin_top = 80.0
margin_right = 172.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="3" type="Button" parent="."]
margin_left = 173.0
margin_top = 80.0
margin_right = 229.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="4" type="Button" parent="."]
margin_left = 59.0
margin_top = 133.0
margin_right = 115.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="5" type="Button" parent="."]
margin_left = 116.0
margin_top = 133.0
margin_right = 172.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="6" type="Button" parent="."]
margin_left = 173.0
margin_top = 133.0
margin_right = 229.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "6"

[node name="7" type="Button" parent="."]
margin_left = 59.0
margin_top = 186.0
margin_right = 115.0
margin_bottom = 238.0
rect_pivot_offset = Vector2( 40, 26 )
custom_fonts/font = SubResource( 1 )
text = "7"

[node name="8" type="Button" parent="."]
margin_left = 116.0
margin_top = 186.0
margin_right = 172.0
margin_bottom = 238.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "8"

[node name="9" type="Button" parent="."]
margin_left = 173.0
margin_top = 186.0
margin_right = 229.0
margin_bottom = 238.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "9"

[node name="+" type="Button" parent="."]
margin_left = 116.0
margin_top = 27.0
margin_right = 172.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 47, 30 )
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="10" type="Button" parent="."]
margin_left = 173.0
margin_top = 27.0
margin_right = 229.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 52, 26 )
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="x" type="Button" parent="."]
margin_left = 231.0
margin_top = 80.0
margin_right = 287.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "x"

[node name="divide" type="Button" parent="."]
margin_left = 231.0
margin_top = 133.0
margin_right = 287.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "/"

[node name="H" type="Button" parent="."]
margin_left = 59.0
margin_top = 240.0
margin_right = 115.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "H"

[node name="=" type="Button" parent="."]
margin_left = 231.0
margin_top = 186.0
margin_right = 287.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( 33, 36 )
custom_fonts/font = SubResource( 1 )
text = "="

[node name="Corrigir" type="Button" parent="."]
margin_left = 231.0
margin_top = 27.0
margin_right = 287.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( -33, 14 )
custom_fonts/font = SubResource( 1 )
text = "<-"

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="0" to="." method="_on_0_button_up"]
[connection signal="button_up" from="1" to="." method="_on_1_button_up"]
[connection signal="button_up" from="2" to="." method="_on_2_button_up"]
[connection signal="button_up" from="3" to="." method="_on_3_button_up"]
[connection signal="button_up" from="4" to="." method="_on_4_button_up"]
[connection signal="button_up" from="5" to="." method="_on_5_button_up"]
[connection signal="button_up" from="6" to="." method="_on_6_button_up"]
[connection signal="button_up" from="7" to="." method="_on_7_button_up"]
[connection signal="button_up" from="8" to="." method="_on_8_button_up"]
[connection signal="button_up" from="9" to="." method="_on_9_button_up"]
[connection signal="button_up" from="+" to="." method="_on__button_up"]
[connection signal="button_up" from="10" to="." method="_on_10_button_up"]
[connection signal="button_up" from="x" to="." method="_on_x_button_up"]
[connection signal="button_up" from="divide" to="." method="_on_divide_button_up"]
[connection signal="button_up" from="H" to="." method="_on_H_button_up"]
[connection signal="button_up" from="=" to="." method="_on_igual_button_up"]
[connection signal="button_up" from="Corrigir" to="." method="_on_Corrigir_button_up"]
